# nolfaris

./: Cargo.toml  README.md  build.rs
src/: ast.rs  grammar.lalrpop  main.rs  numbers.idk  utils.rs
src/error/: mod.rs  types.rs
src/parser/: ast.rs  grammar.pest  mod.rs  parser.rs
src/utils/: locations.rs
