[package]
name = "nolfaris"
version = "0.1.0"
authors = ["Martin Danhier <martin.danhier@student.unamur.be>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.3"
regex = "1.4.2"

[build-dependencies]
lalrpop = "0.19.3"

