[package]
name = "nolfaris"
version = "0.1.0"
authors = ["Martin Danhier <martin.danhier@student.unamur.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.6"
lazy_static = "1.4.0"
colored = "2.0.0"